--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 
       </div>
 
-      <form name="form-contact" method="post" action="mailto:gianchandaniakash@gmail.com">  
+      <form name="form-contact" method="post" action="mailto:gianchandaniakash@gmail.com" enctype="text/plain">  
   
           <div class="row contact-form">
 
