--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
                   </li>
                       
                   <li>
-                  <a href="https://plus.google.com/u/0/110690089474349632988" target="_blank">
+                  <a href="https://github.com/gianchandania" target="_blank">
                   <i class="ion-social-github" id="github"></i></a> 
                   </li>
 
                   <li>
-                  <a href="https://plus.google.com/u/0/110690089474349632988" target="_blank">
+                  <a href="https://www.linkedin.com/in/akash-gianchandani-242454135/" target="_blank">
                   <i class="ion-social-linkedin" id="linkedin"></i></a> 
                   </li>
 
@@ -409,17 +409,17 @@
 
               <li>
               <a href="https://plus.google.com/u/0/110690089474349632988" target="_blank">
-              <i class="ion-social-googleplus"></i></a> 
+              <i class="ion-social-googleplus" id="google"></i></a> 
               </li>
                       
               <li>
-              <a href="https://plus.google.com/u/0/110690089474349632988" target="_blank">
-              <i class="ion-social-github"></i></a> 
+              <a href="https://github.com/gianchandania" target="_blank">
+              <i class="ion-social-github" id="github"></i></a> 
               </li>
 
               <li>
-              <a href="https://plus.google.com/u/0/110690089474349632988" target="_blank">
-              <i class="ion-social-linkedin"></i></a> 
+              <a href="https://www.linkedin.com/in/akash-gianchandani-242454135/" target="_blank">
+              <i class="ion-social-linkedin" id="linkedin"></i></a> 
               </li>
 
           </ul>
